--- a/README
+++ b/README
@@ -12,9 +12,9 @@ one exception; see the man page).
 
 In addition, the /etc/magic file is built from a subdirectory
 for easier maintenance.  I will act as a clearinghouse for
-magic numbers assigned to all sorts of whacko data files that
+magic numbers assigned to all sorts of data files that
 are in reasonable circulation. Send your whacko magic numbers,
-in file(5) format please(!), to the  author, Ian Darwin,
+in magic(4) format please(!), to the  author, Ian Darwin,
 {utzoo|ihnp4}!darwin!ian, ian@sq.com. 
 
 LEGAL.NOTICE - read this first.
@@ -28,6 +28,7 @@ core - not included in distribution due to mailer limitations.
 debug.c - includes -c printout routine
 file.1 - man page
 magic.4 - another man page, courtesy Guy Harris.
+	Install as magic.4 on USG and magic.5 on V7 or Berkeley; cf Makefile.
 file.c - main program
 file.h - fairly standard header file
 fsmagic.c - first set of tests the program runs, based on filesystem info
