--- a/doc/magic.man
+++ b/doc/magic.man
@@ -35,25 +35,6 @@ A four-byte value (on most systems).
 .IP string
 A string of bytes.
 .RE
-.IP
-The types
-.BR byte ,
-.BR short ,
-and
-.B long
-may optionally be followed by a mask specifier of the form
-.BI & number\fR.
-If a mask specifier is given, the value is AND'ed with the
-.I number
-before any comparisons are done.  The
-.I number
-is specified in C form; e.g.
-.B 13
-is decimal,
-.B 013
-is octal, and
-.B 0x13
-is hexadecimal.
 .IP test
 The value to be compared with the value from the file.  If the type is
 numeric, this value
@@ -72,7 +53,16 @@ value,
 to specify that the value from the file must be greater than the specified
 value,
 or
-.B x
+.BR & ,
+to specify that the value is to be AND'ed with the
+numeric value before any comparisons are done.
+Numeric values are specified in C form; e.g.
+.B 13
+is decimal,
+.B 013
+is octal, and
+.B 0x13
+is hexadecimal.
 to specify that any value will match.  If the character
 is omitted, it is assumed to be
 .BR = .
@@ -105,10 +95,12 @@ The formats
 and
 .I short
 are system-dependant; perhaps they should be specified as a number
-of bytes, since the files being recognized typically come from
-a system on which they are invariant.
+of bytes (2B, 4B, etc), 
+since the files being recognized typically come from
+a system on which the lengths are invariant.
 .PP
-There should be more than one level of subtests, with the level indicated by
+There should be more than one level of subtests,
+with the level possibly indicated by
 the number of
 .B >
 at the beginning of the line.
@@ -128,4 +120,4 @@ at the beginning of the line.
 .\" the changes I posted to the S5R2 version.
 .\"
 .\" Modified for Ian Darwin's version of the file command.
-.\" @(#)$Header: /home/glen/git/file/cvs/file/doc/magic.man,v 1.3 1987/10/05 22:13:38 ian Exp $
+.\" @(#)$Header: /home/glen/git/file/cvs/file/doc/magic.man,v 1.4 1987/11/06 11:07:49 ian Exp $
