--- a/doc/magic.man
+++ b/doc/magic.man
@@ -68,8 +68,10 @@ is omitted, it is assumed to be
 .BR = .
 .IP
 For string values, the byte string from the
-file must match the specified byte string; the byte string from the file
-which is matched is the same length as the specified byte string.
+file must match the specified byte string. 
+The operators =, < and > (but not &) can be applied to strings.
+The length used for matching is that of the string argument
+in the magic file.
 .IP message
 The message to be printed if the comparison succeeds.  If the string
 contains a
@@ -120,4 +122,4 @@ at the beginning of the line.
 .\" the changes I posted to the S5R2 version.
 .\"
 .\" Modified for Ian Darwin's version of the file command.
-.\" @(#)$Header: /p/file/cvsroot/file/doc/magic.man,v 1.4 1987/11/06 11:07:49 ian Exp $
+.\" @(#)$Header: /p/file/cvsroot/file/doc/magic.man,v 1.5 1987/11/06 20:54:31 ian Exp $
