--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 ** README for file(1) Command **
-@(#) $Header: /p/file/cvsroot/file/README,v 1.9 1987/11/07 12:38:30 ian Exp $
+@(#) $Header: /p/file/cvsroot/file/README,v 1.10 1989/05/11 15:01:05 ian Exp $
 
 This is Ian Darwin's (copyright but distributable) file(1)
 command. It follows the USG (Sys V) model of the file command,
@@ -16,7 +16,7 @@ for easier maintenance.  I will act as a clearinghouse for
 magic numbers assigned to all sorts of data files that
 are in reasonable circulation. Send your magic numbers,
 in magic(4) format please, to the author, Ian Darwin,
-{utzoo|ihnp4}!darwin!ian, ian@sq.com. 
+{utzoo|utgpu}!darwin!ian, ian@sq.com, uunet!sq!ian. 
 
 LEGAL.NOTICE - read this first.
 README - read this second (you are currently reading this file).
@@ -41,6 +41,7 @@ file.h - header file
 fsmagic.c - first set of tests the program runs, based on filesystem info
 is_tar.c - knows about tarchives (courtesy John Gilmore).
 magdir - directory of /etc/magic pieces
+	magdir/Makefile - ADJUST THIS FOR YOUR CONFIGURATION
 names.h - header file for ascmagic.c
 softmagic.c - 2nd set of tests, based on /etc/magic
 strtok.c, getopt.c - in case you them (courtesy of Henry Spencer).
