--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 ** README for file(1) Command **
-@(#) $Header: /home/glen/git/file/cvs/file/README,v 1.11 1990/10/03 18:35:35 ian Exp $
+@(#) $Header: /home/glen/git/file/cvs/file/README,v 1.12 1992/05/21 16:21:33 ian Exp $
 
 This is Release 1.2 of  Ian Darwin's (copyright but distributable) file(1)
 command. It follows the USG (Sys V) model of the file command, rather than
@@ -15,7 +15,6 @@ for easier maintenance.  I will act as a clearinghouse for
 magic numbers assigned to all sorts of data files that
 are in reasonable circulation. Send your magic numbers,
 in magic(4) format please, to the author, Ian Darwin,
-{utzoo|utgpu}!darwin!ian, ian@sq.com, uunet!sq!ian. 
 
 LEGAL.NOTICE - read this first.
 README - read this second (you are currently reading this file).
@@ -46,3 +45,16 @@ softmagic.c - 2nd set of tests, based on /etc/magic
 strtok.c, getopt.c - in case you them (courtesy of Henry Spencer).
 strtol.c, strchr.c - in case you need them - public domain.
 tst - simple test suite, built from tst/Makefile
+
+Ian Darwin
+Darwin Open Systems
+R R 1
+Palgrave, Ontario L0N 1P0
+Canada
+
+E-mail: darwin@cs.toronto.edu
+	utzoo!ian
+	ian@darwin.uucp
+	uunet!sq!ian. 
+
+Phone: Do not even think of telephoning me about this program.
