--- a/doc/file.man
+++ b/doc/file.man
@@ -1,4 +1,5 @@
 .TH FILE 1 "Copyright but distributable"
+.\# $Id: file.man,v 1.16 1992/09/08 15:32:50 ian Exp $
 .SH NAME
 .I file
 \- determine file type
